src/ANTLR/thanosParser.ts
// Generated from ./ANTLR/thanosParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { thanosParserListener } from "./thanosParserListener";

export class thanosParser extends Parser {
	public static readonly MODEL = 1;
	public static readonly BUILD = 2;
	public static readonly FIT = 3;
	public static readonly UPLOAD = 4;
	public static readonly DELETE = 5;
	public static readonly TRANSFORM = 6;
	public static readonly PREDICT = 7;
	public static readonly EVALUATE = 8;
	public static readonly CONVERT = 9;
	public static readonly SEARCH = 10;
	public static readonly FUNCTION = 11;
	public static readonly PRINT = 12;
	public static readonly COPY = 13;
	public static readonly LIST = 14;
	public static readonly TABLE = 15;
	public static readonly THANOSQL = 16;
	public static readonly DATASET = 17;
	public static readonly GET = 18;
	public static readonly USING = 19;
	public static readonly OPTIONS = 20;
	public static readonly AS = 21;
	public static readonly BY = 22;
	public static readonly IMAGE = 23;
	public static readonly AUDIO = 24;
	public static readonly VIDEO = 25;
	public static readonly KEYWORD = 26;
	public static readonly TEXT = 27;
	public static readonly JOIN = 28;
	public static readonly FROM = 29;
	public static readonly IDENTIFIER = 30;
	public static readonly NAME = 31;
	public static readonly OPERATOR_SPECIAL = 32;
	public static readonly COLON = 33;
	public static readonly SEMI_COLON = 34;
	public static readonly COMMA = 35;
	public static readonly EQUAL = 36;
	public static readonly LEFT_PAREN = 37;
	public static readonly RIGHT_PAREN = 38;
	public static readonly LEFT_SQURE = 39;
	public static readonly RIGHT_SQURE = 40;
	public static readonly DIVIDE = 41;
	public static readonly MULTIPLY = 42;
	public static readonly DOT = 43;
	public static readonly LT = 44;
	public static readonly GT = 45;
	public static readonly MINUS = 46;
	public static readonly SIMPLE_COMMENT = 47;
	public static readonly BRACKETED_COMMENT = 48;
	public static readonly WS = 49;
	public static readonly RULE_thanosLanguage = 0;
	public static readonly RULE_thanosQuery = 1;
	public static readonly RULE_thanosStmt = 2;
	public static readonly RULE_thanosNoSubqueryStmt = 3;
	public static readonly RULE_thanosSubqueryStmt = 4;
	public static readonly RULE_thanosSubquery = 5;
	public static readonly RULE_thanosBuildModelStmt = 6;
	public static readonly RULE_thanosFitModelStmt = 7;
	public static readonly RULE_thanosUploadModelStmt = 8;
	public static readonly RULE_thanosDeleteModelStmt = 9;
	public static readonly RULE_thanosPredictStmt = 10;
	public static readonly RULE_thanosEvaluateStmt = 11;
	public static readonly RULE_thanosConvertStmt = 12;
	public static readonly RULE_thanosSearchStmt = 13;
	public static readonly RULE_thanosSearchImageStmt = 14;
	public static readonly RULE_thanosSearchAudioStmt = 15;
	public static readonly RULE_thanosSearchVideoStmt = 16;
	public static readonly RULE_thanosSearchKeywordStmt = 17;
	public static readonly RULE_thanosSearchTextStmt = 18;
	public static readonly RULE_thanosFunctionStmt = 19;
	public static readonly RULE_thanosPrintStmt = 20;
	public static readonly RULE_thanosPrintImageStmt = 21;
	public static readonly RULE_thanosPrintAudioStmt = 22;
	public static readonly RULE_thanosPrintVideoStmt = 23;
	public static readonly RULE_thanosCopyStmt = 24;
	public static readonly RULE_thanosListStmt = 25;
	public static readonly RULE_thanosListTableStmt = 26;
	public static readonly RULE_thanosListModelStmt = 27;
	public static readonly RULE_thanosListThanoSQLModelStmt = 28;
	public static readonly RULE_thanosListThanoSQLDatasetStmt = 29;
	public static readonly RULE_thanosGetStmt = 30;
	public static readonly RULE_thanosGetThanoSQLModelStmt = 31;
	public static readonly RULE_thanosGetThanoSQLDatasetStmt = 32;
	public static readonly RULE_thanosUsingStmt = 33;
	public static readonly RULE_thanosOptionStmt = 34;
	public static readonly RULE_normalSubquery = 35;
	public static readonly RULE_normalStmt = 36;
	public static readonly RULE_remaining = 37;
	public static readonly RULE_normalParenException = 38;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"thanosLanguage", "thanosQuery", "thanosStmt", "thanosNoSubqueryStmt", 
		"thanosSubqueryStmt", "thanosSubquery", "thanosBuildModelStmt", "thanosFitModelStmt", 
		"thanosUploadModelStmt", "thanosDeleteModelStmt", "thanosPredictStmt", 
		"thanosEvaluateStmt", "thanosConvertStmt", "thanosSearchStmt", "thanosSearchImageStmt", 
		"thanosSearchAudioStmt", "thanosSearchVideoStmt", "thanosSearchKeywordStmt", 
		"thanosSearchTextStmt", "thanosFunctionStmt", "thanosPrintStmt", "thanosPrintImageStmt", 
		"thanosPrintAudioStmt", "thanosPrintVideoStmt", "thanosCopyStmt", "thanosListStmt", 
		"thanosListTableStmt", "thanosListModelStmt", "thanosListThanoSQLModelStmt", 
		"thanosListThanoSQLDatasetStmt", "thanosGetStmt", "thanosGetThanoSQLModelStmt", 
		"thanosGetThanoSQLDatasetStmt", "thanosUsingStmt", "thanosOptionStmt", 
		"normalSubquery", "normalStmt", "remaining", "normalParenException",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, "':'", "';'", "','", 
		"'='", "'('", "')'", "'['", "']'", "'/'", "'*'", "'.'", "'<'", "'>'", 
		"'-'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "MODEL", "BUILD", "FIT", "UPLOAD", "DELETE", "TRANSFORM", "PREDICT", 
		"EVALUATE", "CONVERT", "SEARCH", "FUNCTION", "PRINT", "COPY", "LIST", 
		"TABLE", "THANOSQL", "DATASET", "GET", "USING", "OPTIONS", "AS", "BY", 
		"IMAGE", "AUDIO", "VIDEO", "KEYWORD", "TEXT", "JOIN", "FROM", "IDENTIFIER", 
		"NAME", "OPERATOR_SPECIAL", "COLON", "SEMI_COLON", "COMMA", "EQUAL", "LEFT_PAREN", 
		"RIGHT_PAREN", "LEFT_SQURE", "RIGHT_SQURE", "DIVIDE", "MULTIPLY", "DOT", 
		"LT", "GT", "MINUS", "SIMPLE_COMMENT", "BRACKETED_COMMENT", "WS",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(thanosParser._LITERAL_NAMES, thanosParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return thanosParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "thanosParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return thanosParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return thanosParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(thanosParser._ATN, this);
	}
	// @RuleVersion(0)
	public thanosLanguage(): ThanosLanguageContext {
		let _localctx: ThanosLanguageContext = new ThanosLanguageContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, thanosParser.RULE_thanosLanguage);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 78;
			this.thanosQuery();
			this.state = 79;
			this.match(thanosParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public thanosQuery(): ThanosQueryContext {
		let _localctx: ThanosQueryContext = new ThanosQueryContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, thanosParser.RULE_thanosQuery);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 81;
			this.normalStmt();
			this.state = 87;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << thanosParser.BUILD) | (1 << thanosParser.FIT) | (1 << thanosParser.UPLOAD) | (1 << thanosParser.DELETE) | (1 << thanosParser.PREDICT) | (1 << thanosParser.EVALUATE) | (1 << thanosParser.CONVERT) | (1 << thanosParser.SEARCH) | (1 << thanosParser.FUNCTION) | (1 << thanosParser.PRINT) | (1 << thanosParser.COPY) | (1 << thanosParser.LIST) | (1 << thanosParser.GET) | (1 << thanosParser.JOIN) | (1 << thanosParser.FROM))) !== 0) || _la === thanosParser.LEFT_PAREN) {
				{
				{
				this.state = 82;
				this.thanosStmt();
				this.state = 83;
				this.normalStmt();
				}
				}
				this.state = 89;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public thanosStmt(): ThanosStmtContext {
		let _localctx: ThanosStmtContext = new ThanosStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, thanosParser.RULE_thanosStmt);
		try {
			this.state = 92;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case thanosParser.BUILD:
			case thanosParser.FIT:
			case thanosParser.UPLOAD:
			case thanosParser.DELETE:
			case thanosParser.PRINT:
			case thanosParser.COPY:
			case thanosParser.GET:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 90;
				this.thanosNoSubqueryStmt();
				}
				break;
			case thanosParser.PREDICT:
			case thanosParser.EVALUATE:
			case thanosParser.CONVERT:
			case thanosParser.SEARCH:
			case thanosParser.FUNCTION:
			case thanosParser.LIST:
			case thanosParser.JOIN:
			case thanosParser.FROM:
			case thanosParser.LEFT_PAREN:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 91;
				this.thanosSubqueryStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public thanosNoSubqueryStmt(): ThanosNoSubqueryStmtContext {
		let _localctx: ThanosNoSubqueryStmtContext = new ThanosNoSubqueryStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, thanosParser.RULE_thanosNoSubqueryStmt);
		try {
			this.state = 101;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case thanosParser.BUILD:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 94;
				this.thanosBuildModelStmt();
				}
				break;
			case thanosParser.FIT:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 95;
				this.thanosFitModelStmt();
				}
				break;
			case thanosParser.UPLOAD:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 96;
				this.thanosUploadModelStmt();
				}
				break;
			case thanosParser.DELETE:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 97;
				this.thanosDeleteModelStmt();
				}
				break;
			case thanosParser.PRINT:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 98;
				this.thanosPrintStmt();
				}
				break;
			case thanosParser.COPY:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 99;
				this.thanosCopyStmt();
				}
				break;
			case thanosParser.GET:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 100;
				this.thanosGetStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public thanosSubqueryStmt(): ThanosSubqueryStmtContext {
		let _localctx: ThanosSubqueryStmtContext = new ThanosSubqueryStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, thanosParser.RULE_thanosSubqueryStmt);
		try {
			this.state = 111;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case thanosParser.PREDICT:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 103;
				this.thanosPredictStmt();
				}
				break;
			case thanosParser.EVALUATE:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 104;
				this.thanosEvaluateStmt();
				}
				break;
			case thanosParser.CONVERT:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 105;
				this.thanosConvertStmt();
				}
				break;
			case thanosParser.SEARCH:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 106;
				this.thanosSearchStmt();
				}
				break;
			case thanosParser.FUNCTION:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 107;
				this.thanosFunctionStmt();
				}
				break;
			case thanosParser.LIST:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 108;
				this.thanosListStmt();
				}
				break;
			case thanosParser.JOIN:
			case thanosParser.FROM:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 109;
				this.normalSubquery();
				}
				break;
			case thanosParser.LEFT_PAREN:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 110;
				this.normalParenException();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public thanosSubquery(): ThanosSubqueryContext {
		let _localctx: ThanosSubqueryContext = new ThanosSubqueryContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, thanosParser.RULE_thanosSubquery);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 113;
			this.match(thanosParser.LEFT_PAREN);
			this.state = 114;
			this.normalStmt();
			this.state = 120;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 7)) & ~0x1F) === 0 && ((1 << (_la - 7)) & ((1 << (thanosParser.PREDICT - 7)) | (1 << (thanosParser.EVALUATE - 7)) | (1 << (thanosParser.CONVERT - 7)) | (1 << (thanosParser.SEARCH - 7)) | (1 << (thanosParser.FUNCTION - 7)) | (1 << (thanosParser.LIST - 7)) | (1 << (thanosParser.JOIN - 7)) | (1 << (thanosParser.FROM - 7)) | (1 << (thanosParser.LEFT_PAREN - 7)))) !== 0)) {
				{
				{
				this.state = 115;
				this.thanosSubqueryStmt();
				this.state = 116;
				this.normalStmt();
				}
				}
				this.state = 122;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 123;
			this.match(thanosParser.RIGHT_PAREN);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public thanosBuildModelStmt(): ThanosBuildModelStmtContext {
		let _localctx: ThanosBuildModelStmtContext = new ThanosBuildModelStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, thanosParser.RULE_thanosBuildModelStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 125;
			this.match(thanosParser.BUILD);
			this.state = 126;
			this.match(thanosParser.MODEL);
			this.state = 127;
			_localctx._user_model_name = this.match(thanosParser.IDENTIFIER);
			this.state = 128;
			this.thanosUsingStmt();
			this.state = 129;
			this.match(thanosParser.AS);
			this.state = 131;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				{
				this.state = 130;
				this.thanosSubquery();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public thanosFitModelStmt(): ThanosFitModelStmtContext {
		let _localctx: ThanosFitModelStmtContext = new ThanosFitModelStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, thanosParser.RULE_thanosFitModelStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 133;
			this.match(thanosParser.FIT);
			this.state = 134;
			this.match(thanosParser.MODEL);
			this.state = 135;
			_localctx._user_model_name = this.match(thanosParser.IDENTIFIER);
			this.state = 136;
			this.thanosUsingStmt();
			this.state = 137;
			this.match(thanosParser.AS);
			this.state = 139;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				{
				this.state = 138;
				this.thanosSubquery();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public thanosUploadModelStmt(): ThanosUploadModelStmtContext {
		let _localctx: ThanosUploadModelStmtContext = new ThanosUploadModelStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, thanosParser.RULE_thanosUploadModelStmt);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 141;
			this.match(thanosParser.UPLOAD);
			this.state = 142;
			this.match(thanosParser.MODEL);
			this.state = 143;
			_localctx._user_model_name = this.match(thanosParser.IDENTIFIER);
			this.state = 145;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === thanosParser.OPTIONS) {
				{
				this.state = 144;
				this.thanosOptionStmt();
				}
			}

			this.state = 147;
			this.match(thanosParser.FROM);
			this.state = 148;
			_localctx._path = this.match(thanosParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public thanosDeleteModelStmt(): ThanosDeleteModelStmtContext {
		let _localctx: ThanosDeleteModelStmtContext = new ThanosDeleteModelStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, thanosParser.RULE_thanosDeleteModelStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 150;
			this.match(thanosParser.DELETE);
			this.state = 151;
			this.match(thanosParser.MODEL);
			this.state = 152;
			_localctx._built_model_name = this.match(thanosParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public thanosPredictStmt(): ThanosPredictStmtContext {
		let _localctx: ThanosPredictStmtContext = new ThanosPredictStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, thanosParser.RULE_thanosPredictStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 154;
			this.match(thanosParser.PREDICT);
			this.state = 155;
			this.thanosUsingStmt();
			this.state = 156;
			this.match(thanosParser.AS);
			this.state = 158;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				{
				this.state = 157;
				this.thanosSubquery();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public thanosEvaluateStmt(): ThanosEvaluateStmtContext {
		let _localctx: ThanosEvaluateStmtContext = new ThanosEvaluateStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, thanosParser.RULE_thanosEvaluateStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 160;
			this.match(thanosParser.EVALUATE);
			this.state = 161;
			this.thanosUsingStmt();
			this.state = 162;
			this.match(thanosParser.AS);
			this.state = 164;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				{
				this.state = 163;
				this.thanosSubquery();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public thanosConvertStmt(): ThanosConvertStmtContext {
		let _localctx: ThanosConvertStmtContext = new ThanosConvertStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, thanosParser.RULE_thanosConvertStmt);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 166;
			this.match(thanosParser.CONVERT);
			this.state = 167;
			this.thanosUsingStmt();
			this.state = 168;
			this.match(thanosParser.AS);
			this.state = 170;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 10, this._ctx) ) {
			case 1:
				{
				this.state = 169;
				this.thanosSubquery();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public thanosSearchStmt(): ThanosSearchStmtContext {
		let _localctx: ThanosSearchStmtContext = new ThanosSearchStmtContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, thanosParser.RULE_thanosSearchStmt);
		try {
			this.state = 182;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 11, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 172;
				this.match(thanosParser.SEARCH);
				this.state = 173;
				this.thanosSearchImageStmt();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 174;
				this.match(thanosParser.SEARCH);
				this.state = 175;
				this.thanosSearchAudioStmt();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 176;
				this.match(thanosParser.SEARCH);
				this.state = 177;
				this.thanosSearchVideoStmt();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 178;
				this.match(thanosParser.SEARCH);
				this.state = 179;
				this.thanosSearchKeywordStmt();
				}
				break;
